Added working IPC communications

--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -13,6 +13,6 @@
       console.log(arg);
     });
 
-    window.electron.ipcRenderer.myPing();
+    // window.electron.ipcRenderer.myPing();
   </script>
 </html>
